--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello, World!</h1>
-        <p>This is a basic webpage example.</p>
+        <h1>Hannah Kuo</h1>
+        <a href="https://github.com/hkuo06">GitHub</a>
+        <a href="https://www.linkedin.com/in/hannah-kuo-06/">LinkedIn</a>
+        <img src="pic.HEIC" alt="Hannah Kuo">
+    </div>
+    <div class="education">
+        <h2>Education</h2>
+        <p>University of California, Berkeley 2024</p>
+        <p>B.A. Computer Science</p>
+        <p>B.A. Linguistics</p>
+        <p>Minors in Data Science, Chinese</p>
+
+    </div>
+    <div class="work">
+        <h2>Work Experience</h2>
+        <dl>
+            <dt>Undergraduate Student Instructor - LING100</dt>
+            <dd></dd>
+            <dt>Technical Intern</dt>
+            <dd></dd>
+            <dt>Software Engineer Intern - AppOrchid Inc.</dt>
+            <dd></dd>
     </div>
 </body>
 </html>
