--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Hannah Kuo</h1>
         <a href="https://github.com/hkuo06">GitHub</a>
         <a href="https://www.linkedin.com/in/hannah-kuo-06/">LinkedIn</a>
-        <img src="pic.HEIC" alt="Hannah Kuo">
+        <img src="pic.jpg" alt="Hannah Kuo">
     </div>
     <div class="education">
         <h2>Education</h2>
